# BeBeC2024

./: .gitattributes  LICENSE  README.md  pyproject.toml  train.py
configfiles/: config_vit_he2_z-ap.toml  config_vit_he4_z-ap.toml  config_vit_he8_z-ap.toml  config_vit_mf_he1-16_z-ap.toml  config_vit_mf_he2-8_z-ap.toml
models/config_vit_mf_he1-16/: model.keras
models/config_vit_mf_he1-16/tensorboard/test_0/: events.out.tfevents.1713350794.24fd399c4d35.29.0.v2
models/config_vit_mf_he1-16/tensorboard/test_1/: events.out.tfevents.1713350794.24fd399c4d35.29.1.v2
models/config_vit_mf_he1-16/tensorboard/test_2/: events.out.tfevents.1713350794.24fd399c4d35.29.2.v2
models/config_vit_mf_he1-16/tensorboard/test_3/: events.out.tfevents.1713350794.24fd399c4d35.29.3.v2
models/config_vit_mf_he1-16/tensorboard/test_4/: events.out.tfevents.1713350794.24fd399c4d35.29.4.v2
models/config_vit_mf_he1-16/tensorboard/test_5/: events.out.tfevents.1713350794.24fd399c4d35.29.5.v2
models/config_vit_mf_he1-16/tensorboard/train/: events.out.tfevents.1713350794.24fd399c4d35.29.6.v2
models/config_vit_mf_he1-16/tensorboard/validation/: events.out.tfevents.1713351458.24fd399c4d35.29.7.v2
src/: callbacks.py  config.py  datasets.py  loss.py  models.py  pipeline.py  utils.py
src/bebec2024/: callbacks.py  config.py  datasets.py  loss.py  models.py  pipeline.py  utils.py
